welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: illegal start of simple expression
  var tab=[]
          ^golomb:17: error: '(' expected but identifier found.
  if l>0 {}
     ^golomb:22: error: ';' expected but 'else' found.
	else {[1]}
        ^golomb:24: error: Unmatched closing brace '}' ignored here
 }
 ^